# proxy-rss

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  runserver.py
proxy_rss/: proxy.py  spotify.py  twitter.py  wsgi.py
proxy_rss/templates/: timeline.rss
proxy_rss/templates/spotify/: albums.rss  tracks.rss
proxy_rss/templates/twitter/: search.rss
tweetrss/: manage.py  proxy.py  settings.py.example  wsgi.py
tweetrss/proxy/: views.py
tweetrss/tweetrss/: settings.py.example  urls.py
tweetrss/tweetrss/proxy/: urls.py  views.py
tweetrss/tweetrss/setup/: views.py
tweetrss/tweetrss/templates/proxy/: search.rss  timeline.rss
tweetrss/tweetrss/templates/setup/: appkey.html  base.html  index.html
