[tool.poetry]
name = "proxy-rss"
version = "0.1.0"
description = "RSS feed proxy for Twitter & Spotify"

license = "BSD-3-Clause"

authors = ["Remi Rampin <remi@rampin.org>"]

readme = "README.md"

repository = "https://github.com/remram44/proxy-rss"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "*"
tweepy = "^4.0"
spotipy = "^2"
uWSGI = {version = "^2", optional = true}

[tool.poetry.dev-dependencies]
ipykernel = "*"
flake8 = "*"

[tool.poetry.extras]
wsgi = ["uwsgi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
